Format checkbox better, needs more fixes to align right

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,22 @@ input{
     min-height: 2em;
     box-sizing: border-box;
 }
+#itemBox{
+    width: 15px;
+    height: 15px;
+    display: inline;
+    vertical-align: baseline;
+    position: relative;
+    padding: 0;
+    margin: 0;
+    float: top;
+    top: -1px;
+}
+label{
+    display: block;
+    padding-left: 15px;
+    text-indent: -15px;
+}
 
 .center-block{
     margin: auto;
